--- a/app/src/main/res/layout/act_cases_drawer_tab_host.xml
+++ b/app/src/main/res/layout/act_cases_drawer_tab_host.xml
@@ -14,7 +14,7 @@
     android:background="@mipmap/slide_menu_bg"
     android:fitsSystemWindows="true"/>
 
-  <com.ijoic.translucent_layout.TransFragmentTabHost
+  <com.ijoic.translucent_layout.v4.TransFragmentTabHost
     android:id="@android:id/tabhost"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -42,6 +42,6 @@
         android:fitsSystemWindows="true"/>
     </com.ijoic.translucent_layout.TransLinearLayout>
 
-  </com.ijoic.translucent_layout.TransFragmentTabHost>
+  </com.ijoic.translucent_layout.v4.TransFragmentTabHost>
 
 </android.support.v4.widget.DrawerLayout>
