Fix layout error with "android:windowSoftInputMode=adjustResize".

--- a/app/src/main/res/layout/act_main.xml
+++ b/app/src/main/res/layout/act_main.xml
@@ -30,4 +30,10 @@
     android:layout_height="wrap_content"
     android:text="@string/title_sample_drawer_tabhost"/>
 
+  <Button
+    android:id="@+id/button_simple_title_edit"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="@string/title_sample_simple_title_edit"/>
+
 </LinearLayout>
