--- a/lib.translucent_layout/src/main/res/values/attrs.xml
+++ b/lib.translucent_layout/src/main/res/values/attrs.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-  <attr name="force_inset" format="boolean"/>
+  <attr name="forceInset" format="boolean"/>
+  <attr name="adjustResize" format="boolean"/>
+
+  <declare-styleable name="TranslucentLayout">
+    <attr name="forceInset"/>
+    <attr name="adjustResize"/>
+  </declare-styleable>
 
 </resources>
